# clipr

./: .gitignore  CLAUDE.md  Cargo.toml  clipr.toml.example  flake.nix
.specify/memory/: constitution.md
specs/001-clipboard-manager-tui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-clipboard-manager-tui/checklists/: requirements.md
specs/001-clipboard-manager-tui/contracts/: clipboard.md  storage.md  ui.md
specs/002-advanced-theming-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-advanced-theming-system/checklists/: requirements.md
specs/002-advanced-theming-system/contracts/: cli.md
src/: app.rs  lib.rs  logging.rs  main.rs
src/clipboard/: backend.rs  mod.rs  watch.rs  wayland.rs
src/image/: mod.rs  protocol.rs
src/models/: clip.rs  mod.rs  registry.rs  search_index.rs
src/storage/: config.rs  history.rs  mod.rs  registers.rs
src/ui/: clip_list.rs  colorscheme.rs  error_modal.rs  help.rs  layout.rs  mod.rs  preview.rs  search.rs  status.rs  theme.rs  theme_picker.rs
