[package]
name = "clipr"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["Dave Balmain <dbalmain@gmail.com>"]
description = "High-performance TUI clipboard history manager for Wayland"
license = "MIT"
repository = "https://github.com/dbalmain/clipr"
keywords = ["clipboard", "tui", "wayland", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
env_logger = "0.11.8"
image = "0.25"
log = "0.4.28"
nucleo = "0.5.0"
nucleo-matcher = "0.3.1"
ratatui = "0.29.0"
ratatui-image = { version = "3.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

[dev-dependencies]
criterion = "0.7.0"

[[bin]]
name = "clipr"
path = "src/main.rs"

[lib]
name = "clipr"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
